<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_anuncio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.projetoapp.sharepages.gui.TelaAnuncio"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayoutAnuncio">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_livro_anuncio"
            android:id="@+id/nomeLivro"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/preVisuFoto"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/nomeLivro"
            android:layout_toStartOf="@+id/nomeLivro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:id="@+id/autorAnuncio"
            android:layout_alignTop="@+id/preVisuFoto"
            android:layout_alignStart="@+id/nomeLivro"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_autor_anuncio"
            android:id="@+id/campoAutorAnuncio"
            android:layout_alignTop="@+id/autorAnuncio"
            android:layout_toEndOf="@+id/autorAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editora"
            android:id="@+id/editoraAnuncio"
            android:layout_below="@+id/autorAnuncio"
            android:layout_alignStart="@+id/autorAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_editora_anuncio"
            android:id="@+id/campoEditoraAnuncio"
            android:layout_below="@+id/campoAutorAnuncio"
            android:layout_toEndOf="@+id/editoraAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_paginas"
            android:id="@+id/nDePaginasAnuncio"
            android:layout_below="@+id/editoraAnuncio"
            android:layout_alignStart="@+id/editoraAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_paginas_anuncio"
            android:id="@+id/campoPagAnuncio"
            android:layout_alignTop="@+id/nDePaginasAnuncio"
            android:layout_toEndOf="@+id/nDePaginasAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edicao"
            android:id="@+id/edicaoAnuncio"
            android:layout_below="@+id/nDePaginasAnuncio"
            android:layout_alignStart="@+id/nDePaginasAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_edicao_anuncio"
            android:id="@+id/campoEdicaoAnuncio"
            android:layout_alignTop="@+id/edicaoAnuncio"
            android:layout_alignStart="@+id/campoAutorAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idioma"
            android:id="@+id/idiomaAnuncio"
            android:layout_below="@+id/edicaoAnuncio"
            android:layout_alignStart="@+id/edicaoAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_idioma_anuncio"
            android:id="@+id/campoIdiomaAnuncio"
            android:layout_below="@+id/campoEdicaoAnuncio"
            android:layout_alignStart="@+id/campoAutorAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponibilidade"
            android:id="@+id/disponibilidadeAnuncio"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/preVisuFoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_disponibilidade_anuncio"
            android:id="@+id/campoDispoAnuncio"
            android:layout_alignTop="@+id/disponibilidadeAnuncio"
            android:layout_toEndOf="@+id/disponibilidadeAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tema"
            android:id="@+id/temaAnuncio"
            android:layout_alignBaseline="@+id/campoTemaAnuncio"
            android:layout_alignBottom="@+id/campoTemaAnuncio"
            android:layout_alignStart="@+id/preVisuFoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_tema_anuncio"
            android:id="@+id/campoTemaAnuncio"
            android:layout_above="@+id/disponibilidadeAnuncio"
            android:layout_toEndOf="@+id/temaAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cidade"
            android:id="@+id/cidadeAnuncio"
            android:layout_below="@+id/disponibilidadeAnuncio"
            android:layout_alignStart="@+id/disponibilidadeAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/campo_cidade_anuncio"
            android:id="@+id/campoCidadeAnuncio"
            android:layout_alignTop="@+id/cidadeAnuncio"
            android:layout_toEndOf="@+id/cidadeAnuncio"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:id="@+id/descricaoAnuncio"
            android:layout_below="@+id/cidadeAnuncio"
            android:layout_alignStart="@+id/cidadeAnuncio"
            android:layout_marginTop="27dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_descricao_anuncio"
            android:id="@+id/campoDescricaoAnuncio"
            android:layout_alignTop="@+id/descricaoAnuncio"
            android:layout_toEndOf="@+id/descricaoAnuncio"
            android:layout_marginLeft="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver avaliação do livro"
            android:id="@+id/botaoAvaliacaoLivro"
            android:layout_below="@+id/descricaoAnuncio"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Conversar com o dono"
            android:id="@+id/botaoConversarDono"
            android:layout_below="@+id/botaoAvaliacaoLivro"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="zoomNaFoto" />

</FrameLayout>
