<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.projetoapp.sharepages.gui.CadastroUsuario"
    android:orientation="vertical">

    <!-- Campo de texto nome-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>
    <requestFocus />

    <EditText android:id="@+id/textoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <!-- Campo de texto email-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText android:id="@+id/textoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <!-- Campo de texto Senha-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha"/>

    <EditText android:id="@+id/textoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_senha"/>

    <EditText android:id="@+id/textoConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>
    <Button
        android:id="@+id/botaoOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/botao_entrar" />


</LinearLayout>