<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_vertical" android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logosharepages"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:contentDescription=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"/>
    <!-- Campo de texto login-->
    <EditText android:id="@+id/tUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
               android:singleLine="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha"/>

    <!-- Campo de texto senha-->
    <EditText android:id="@+id/tSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:singleLine="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_entrar"
        android:layout_marginTop="10dp"
        android:onClick="logar"/>
    <!--no onclick criar o metodo de logar-->
    <TextView
        android:id="@+id/tFazerCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fazer_cadastro"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

</LinearLayout>