<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".gui.ExclusaoUnidadeLivro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pegunta_motivo_exclusao"
        android:id="@+id/perguntaExclusao"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/efetou_a_transacao"
        android:id="@+id/botaoTransacao"
        android:layout_below="@+id/perguntaExclusao"
        android:layout_alignParentStart="true"
        android:onClick="botaoTransacao"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desistiu_de_anunciar"
        android:id="@+id/botaoDesistencia"
        android:layout_alignBottom="@+id/botaoTransacao"
        android:layout_alignEnd="@+id/perguntaExclusao"
        android:onClick="botaoDesistencia"/>
</RelativeLayout>
