<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/livro"
        android:text="@string/livro_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignTop="@+id/editarLivro"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/autor"
        android:text="@string/autor_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tema" />

    <TextView
        android:id="@+id/tema"
        android:text="@string/tema_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editarLivro"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/editarLivro"
        android:background="@null"
        android:src="@drawable/icon"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/botaoExcluir"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/botaoExcluir"
        android:layout_alignTop="@+id/livro"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:src="@drawable/excluir" />

</RelativeLayout>
