<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfil_de_livro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.projetoapp.sharepages.gui.PerfilDeLivro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nome_do livro"
            android:id="@+id/nomeLivro"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="150dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:id="@+id/autor"
            android:layout_below="@+id/campoNomeLivro"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/autorAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editora"
            android:id="@+id/editora"
            android:layout_below="@+id/campoAutor"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/editoraAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_de_paginas"
            android:id="@+id/nPaginas"
            android:layout_below="@+id/campoEditora"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/nDePaginasAnuncio" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/preVisuFoto"
            android:layout_marginTop="-150dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edicao"
            android:id="@+id/edicao"
            android:layout_below="@+id/campoNdePaginas"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/edicaoAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idioma"
            android:id="@+id/idioma"
            android:layout_below="@+id/campoEdicao"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/idiomaAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:text="@string/disponibilidade"
            android:id="@+id/disponibilidade"
            android:layout_below="@+id/campoIdioma"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/disponibilidadeAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tema"
            android:id="@+id/tema"
            android:layout_below="@+id/disponibilidadeSpinner"
            android:layout_toStartOf="@+id/campoEdicao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/temaAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:id="@+id/descricao"
            android:layout_below="@+id/temaSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/campoDescricao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/descricaoAnuncio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CidadeUsuario"
            android:id="@+id/cidadeUsuarioAnuncio" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Avaliação do livro"
            android:id="@+id/avaliacaoAnuncio" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Conversar com o dono"
            android:id="@+id/conversarDono"
            android:onClick="AtualizarLivro"
            android:layout_below="@+id/temaSpinner"
            android:layout_alignEnd="@+id/disponibilidadeSpinner"
            android:layout_marginRight="-100dp"
            android:layout_marginTop="-50dp" />

    </LinearLayout>

</ScrollView>

